# gitrinching

./: CLAUDE.md  Cargo.toml  README.md
src/: git.rs  graph.rs  main.rs  render.rs  state.rs
