[package]
name = "gitrinching"
version = "0.1.0"
edition = "2024"

[dependencies]
rinch = { git = "https://github.com/joeleaver/rinch", subdirectory = "crates/rinch", features = ["desktop", "components", "theme", "debug", "file-dialogs"] }
git2 = { version = "0.19", features = ["vendored-libgit2"] }
